# cloud-project

llm-observability/: .env.example  .gitignore  README.md  docker-compose.yml
llm-observability/api/: Dockerfile  requirements.txt
llm-observability/api/src/: config.py  main.py
llm-observability/api/src/db/: database.py
llm-observability/api/src/models/: entities.py  schemas.py
llm-observability/api/src/routes/: drift.py  prompts.py  quality.py  requests.py
llm-observability/api/src/services/: metrics_service.py  request_service.py
llm-observability/dashboards/: llm-observability-dashboard.json
llm-observability/examples/: batch_prompt_versions.py  chat_web.py  example_usage.py
llm-observability/grafana/provisioning/alerting/: quality-alerts.yml
llm-observability/grafana/provisioning/dashboards/: dashboards.yml
llm-observability/grafana/provisioning/datasources/: datasources.yml
llm-observability/k8s/: api.yaml  grafana.yaml  postgres.yaml  prometheus.yaml  worker.yaml
llm-observability/migrations/: 001_init.sql
llm-observability/ollama/: Dockerfile  entrypoint.sh
llm-observability/prometheus/: prometheus.yml
llm-observability/sdk/: README.md  pyproject.toml
llm-observability/sdk/src/llmobs/: __init__.py  client.py  config.py  models.py  wrapper.py
llm-observability/worker/: Dockerfile  requirements.txt
llm-observability/worker/src/: config.py  main.py
llm-observability/worker/src/services/: db.py
llm-observability/worker/src/tasks/: drift_worker.py  quality_worker.py
