[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmobs-sdk"
version = "0.1.0"
description = "Lightweight LLM observability SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
